--- a/templates/aero_admin_app.html
+++ b/templates/aero_admin_app.html
@@ -47,7 +47,7 @@ License: You must have a valid license purchased only from themeforest(the above
 <link href="{% static 'metronic/admin/layout2/css/custom.css' %}" rel="stylesheet" type="text/css"/>
 <!-- END THEME STYLES -->
 
-<link rel="shortcut icon" href="favicon.ico"/>
+<link rel="shortcut icon" href="{% static 'metronic/global/img/favicon.ico' %}"/>
 </head>
 <!-- END HEAD -->
 
