--- a/templates/aero_admin_login.html
+++ b/templates/aero_admin_login.html
@@ -143,9 +143,9 @@ License: For each use you must have a valid license purchased only from above li
             <div class="d-flex flex-center flex-wrap fs-6 p-5 pb-0">
                 <!--begin::Links-->
                 <div class="d-flex flex-center fw-bold fs-6">
-                    <a href="https://keenthemes.com" class="text-muted text-hover-primary px-2">Baykar</a>
-                    <a href="mailto:support@keenthemes.com" class="text-muted text-hover-primary px-2">Metronik</a>
-                    <a href="https://1.envato.market/EA4JP" class="text-muted text-hover-primary px-2">Github</a>
+                    <a target="_blank" href="https://baykartech.com/tr/" class="text-muted text-hover-primary px-2">Baykar</a>
+                    <a target="_blank" href="https://keenthemes.com/" class="text-muted text-hover-primary px-2">Metronik</a>
+                    <a target="_blank" href="https://github.com/melihkuru/IHAKI" class="text-muted text-hover-primary px-2">Github</a>
                 </div>
                 <!--end::Links-->
             </div>
