--- a/templates/aero_lease_login.html
+++ b/templates/aero_lease_login.html
@@ -62,7 +62,7 @@ License: For each use you must have a valid license purchased only from above li
                     <!--begin::Heading-->
                     <div class="text-center mb-10">
                         <!--begin::Title-->
-                        <h1 class="text-dark mb-3">İHA Kiralama Sistemi Giriş</h1>
+                        <h1 class="text-dark mb-3">İHA Kiralama Yöneticisi Giriş</h1>
                         <!--end::Title-->
                         <!--begin::Link-->
                         <div class="text-gray-400 fw-bold fs-4">Hesabınız Yok Mu?
