IHAKI-8 Created models for Customer, UAV, Rental, and Category. Implemented a configuration system. Enabled caching through Redis.

--- a/static/metronic/views/profile/dashboard.html
+++ b/static/metronic/views/profile/dashboard.html
@@ -853,8 +853,8 @@
 						<div class="item">
 							<div class="item-head">
 								<div class="item-details">
-									<img class="item-pic" src="/static/metronic/admin/layout3/img/avatar3.jpg">
-									<a href="" class="item-name primary-link">Mark</a>
+									<img class="item-pic h-5px" src="/static/metronic/global/img/akinci.png">
+									<a href="" class="item-name primary-link">{{ name }}</a>
 									<span class="item-label">5 hrs ago</span>
 								</div>
 								<span class="item-status"><span class="badge badge-empty badge-warning"></span> Pending</span>
