--- a/templates/aero_lease_sign_up.html
+++ b/templates/aero_lease_sign_up.html
@@ -57,7 +57,7 @@ License: For each use you must have a valid license purchased only from above li
             <!--begin::Wrapper-->
             <div class="w-lg-600px bg-body rounded shadow-sm p-10 p-lg-15 mx-auto">
                 <!--begin::Form-->
-                <form class="form w-100" novalidate="novalidate" id="kt_sign_up_form">
+                <form class="form w-100" novalidate="novalidate" id="kt_sign_up_form" action="{% url 'aero_lease_sign_up' %}" method="post">
                     <!--begin::Heading-->
                     <div class="mb-10 text-center">
                         <!--begin::Title-->
