IHAKI-10 Member registration system completed. Issues with Redis caching mechanism have been addressed.

--- a/templates/aero_admin_login.html
+++ b/templates/aero_admin_login.html
@@ -145,7 +145,8 @@ License: For each use you must have a valid license purchased only from above li
                 <div class="d-flex flex-center fw-bold fs-6">
                     <a target="_blank" href="https://baykartech.com/tr/" class="text-muted text-hover-primary px-2">Baykar</a>
                     <a target="_blank" href="https://keenthemes.com/" class="text-muted text-hover-primary px-2">Metronik</a>
-                    <a target="_blank" href="https://github.com/melihkuru/IHAKI" class="text-muted text-hover-primary px-2">Github</a>
+                    <a target="_blank" href="https://github.com/melihkuru/IHAKI"
+                       class="text-muted text-hover-primary px-2">Github</a>
                 </div>
                 <!--end::Links-->
             </div>
