--- a/templates/aero_lease_sign_up.html
+++ b/templates/aero_lease_sign_up.html
@@ -57,7 +57,26 @@ License: For each use you must have a valid license purchased only from above li
             <!--begin::Wrapper-->
             <div class="w-lg-600px bg-body rounded shadow-sm p-10 p-lg-15 mx-auto">
                 <!--begin::Form-->
-                <form class="form w-100" novalidate="novalidate" id="kt_sign_up_form" action="{% url 'aero_lease_sign_up' %}" method="post">
+                {% if error_message %}
+                <div class="alert alert-dismissible bg-light-danger border border-danger d-flex flex-column flex-sm-row p-5 mb-10">
+                    <!--begin::Icon-->
+                    <span class="svg-icon svg-icon-2hx svg-icon-danger me-4 mb-5 mb-sm-0">!</span>
+                    <!--end::Icon-->
+                    <!--begin::Wrapper-->
+                    <div class="d-flex flex-column pe-0 pe-sm-10">
+                        <!--begin::Title-->
+                        <h5 class="mb-1">Hata</h5>
+                        <!--end::Title-->
+                        <!--begin::Content-->
+                        <span>{{ error_message }}</span>
+                        <!--end::Content-->
+                    </div>
+                    <!--end::Wrapper-->
+                </div>
+                {% endif %}
+                <form class="form w-100" novalidate="novalidate" id="kt_sign_up_form"
+                      action="{% url 'aero_lease_sign_up' %}" method="post">
+                    {% csrf_token %}
                     <!--begin::Heading-->
                     <div class="mb-10 text-center">
                         <!--begin::Title-->
@@ -83,14 +102,14 @@ License: For each use you must have a valid license purchased only from above li
                         <div class="col-xl-6">
                             <label class="form-label fw-bolder text-dark fs-6">İsim</label>
                             <input class="form-control form-control-lg form-control-solid" type="text" placeholder=""
-                                   name="first-name" autocomplete="off"/>
+                                   name="first-name" value="{{ firstname }}" autocomplete="off"/>
                         </div>
                         <!--end::Col-->
                         <!--begin::Col-->
                         <div class="col-xl-6">
                             <label class="form-label fw-bolder text-dark fs-6">Soyisim</label>
                             <input class="form-control form-control-lg form-control-solid" type="text" placeholder=""
-                                   name="last-name" autocomplete="off"/>
+                                   name="last-name" value="{{ lastname }}" autocomplete="off"/>
                         </div>
                         <!--end::Col-->
                     </div>
@@ -99,7 +118,12 @@ License: For each use you must have a valid license purchased only from above li
                     <div class="fv-row mb-7">
                         <label class="form-label fw-bolder text-dark fs-6">Email</label>
                         <input class="form-control form-control-lg form-control-solid" type="email" placeholder=""
-                               name="email" autocomplete="off"/>
+                               name="email" value="{{ email }}" autocomplete="off"/>
+                    </div>
+                    <div class="fv-row mb-7">
+                        <label class="form-label fw-bolder text-dark fs-6">Ticari Ünvan</label>
+                        <input class="form-control form-control-lg form-control-solid" type="text" placeholder=""
+                               name="merchant" value="{{ merchant }}" autocomplete="off"/>
                     </div>
                     <!--end::Input group-->
                     <!--begin::Input group-->
@@ -131,7 +155,8 @@ License: For each use you must have a valid license purchased only from above li
                         </div>
                         <!--end::Wrapper-->
                         <!--begin::Hint-->
-                        <div class="text-muted">Harf, rakam ve sembollerin karışımından oluşan 8 veya daha fazla karakter kullanın.
+                        <div class="text-muted">Şifreniz için harf ve rakam karışımından oluşan 8 veya daha fazla
+                            karakter kullanın.
                         </div>
                         <!--end::Hint-->
                     </div>
@@ -140,21 +165,23 @@ License: For each use you must have a valid license purchased only from above li
                     <div class="fv-row mb-5">
                         <label class="form-label fw-bolder text-dark fs-6">Şifrenizi Tekrar Giriniz</label>
                         <input class="form-control form-control-lg form-control-solid" type="password" placeholder=""
-                               name="confirm-password" autocomplete="off"/>
+                               name="confirm_password" autocomplete="off"/>
                     </div>
                     <!--end::Input group-->
                     <!--begin::Input group-->
                     <div class="fv-row mb-10">
                         <label class="form-check form-check-custom form-check-solid form-check-inline">
                             <input class="form-check-input" type="checkbox" name="toc" value="1"/>
-                            <span class="form-check-label fw-bold text-gray-700 fs-6">
-									<a href="#" class="ms-1 link-primary">Koşullar ve Şartları </a> Kabul Ediyorum.</span>
+                            <span class="form-check-label fw-bold text-gray-700 fs-6" data-bs-toggle="modal"
+                                  data-bs-target="#kt_modal_1">
+									<a href="javascript:void(0)"
+                                       class="ms-1 link-primary">Koşullar ve Şartları </a> Kabul Ediyorum.</span>
                         </label>
                     </div>
                     <!--end::Input group-->
                     <!--begin::Actions-->
                     <div class="text-center">
-                        <button type="button" id="kt_sign_up_submit" class="btn btn-lg btn-primary">
+                        <button type="submit" id="kt_sign_up_submit_2" class="btn btn-lg btn-primary">
                             <span class="indicator-label">Kayıt Ol</span>
                         </button>
                     </div>
@@ -169,8 +196,10 @@ License: For each use you must have a valid license purchased only from above li
         <div class="d-flex flex-center flex-column-auto p-10">
             <!--begin::Links-->
             <div class="d-flex align-items-center fw-bold fs-6">
-                 <a target="_blank" href="https://baykartech.com/tr/" class="text-muted text-hover-primary px-2">Baykar</a>
-                <a target="_blank" href="https://keenthemes.com/" class="text-muted text-hover-primary px-2">Metronik</a>
+                <a target="_blank" href="https://baykartech.com/tr/"
+                   class="text-muted text-hover-primary px-2">Baykar</a>
+                <a target="_blank" href="https://keenthemes.com/"
+                   class="text-muted text-hover-primary px-2">Metronik</a>
                 <a target="_blank" href="https://github.com/melihkuru/IHAKI" class="text-muted text-hover-primary px-2">Github</a>
             </div>
             <!--end::Links-->
@@ -178,6 +207,30 @@ License: For each use you must have a valid license purchased only from above li
         <!--end::Footer-->
     </div>
     <!--end::Authentication - Sign-up-->
+</div>
+<div class="modal fade" tabindex="-1" id="kt_modal_1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Koşullar ve Şartlar</h5>
+
+                <!--begin::Close-->
+                <div class="btn btn-icon btn-sm btn-active-light-primary ms-2" data-bs-dismiss="modal"
+                     aria-label="Close">
+                    <span class="svg-icon svg-icon-2x"></span>
+                </div>
+                <!--end::Close-->
+            </div>
+
+            <div class="modal-body">
+                <p>{{ terms_conditions }}</p>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Kapat</button>
+            </div>
+        </div>
+    </div>
 </div>
 <!--end::Main-->
 <script>var hostUrl = "assets/";</script>
