--- a/static/metronic/views/profile/dashboard.html
+++ b/static/metronic/views/profile/dashboard.html
@@ -853,7 +853,7 @@
 						<div class="item">
 							<div class="item-head">
 								<div class="item-details">
-									<img class="item-pic h-5px" src="/static/metronic/global/img/akinci.png">
+									<img class="item-pic" src="/static/metronic/global/img/IHA.png" style="height: 50px;border-radius: 10px">
 									<a href="" class="item-name primary-link">{{ name }}</a>
 									<span class="item-label">5 hrs ago</span>
 								</div>
