--- a/static/metronic/views/profile/main.html
+++ b/static/metronic/views/profile/main.html
@@ -10,7 +10,7 @@
 			<i class="fa fa-angle-right"></i>
 		</li>
 		<li>
-			<a href="#/profile/dashboard">User Profile</a>
+			<a href="#/profile">User Profile</a>
 		</li>
 	</ul>
 	<div class="page-toolbar">
