--- a/static/metronic/views/lease/list.html
+++ b/static/metronic/views/lease/list.html
@@ -1,106 +1,38 @@
 <!-- BEGIN PAGE HEADER-->
 <h3 class="page-title">
-	Ajax Datatables <small>ajax datatable samples</small>
+	Kira Listesi
 </h3>
 <div class="page-bar">
 	<ul class="page-breadcrumb">
-		<li>
-			<i class="fa fa-home"></i>
-			<a href="#/dashboard">Home</a>
-			<i class="fa fa-angle-right"></i>
-		</li>
-		<li>
-			<a href="#/datatables/advanced.html">Datatables</a>
-		</li>
-		<li>
-			<a href="#/datatables/advanced.html">Ajax Datatables</a>
-		</li>
-	</ul>
+        <li>
+            <i class="fa fa-home"></i>
+            <a href="#/dashboard">Kiralama Yönetim Sistemi</a>
+            <i class="fa fa-angle-right"></i>
+        </li>
+        <li>
+            <a href="#/lease/list">Kira Listesi</a>
+        </li>
+    </ul>
 	<div class="page-toolbar">
-		<div class="btn-group pull-right">
-			<button type="button" class="btn btn-fit-height grey-salt dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000" data-close-others="true">
-			Actions <i class="fa fa-angle-down"></i>
-			</button>
-			<ul class="dropdown-menu pull-right" role="menu">
-				<li>
-					<a href="#">
-					<i class="icon-user"></i> New User </a>
-				</li>
-				<li>
-					<a href="#">
-					<i class="icon-present"></i> New Event <span class="badge badge-success">4</span>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-					<i class="icon-basket"></i> New order </a>
-				</li>
-				<li class="divider">
-				</li>
-				<li>
-					<a href="#">
-					<i class="icon-flag"></i> Pending Orders <span class="badge badge-danger">4</span>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-					<i class="icon-users"></i> Pending Users <span class="badge badge-warning">12</span>
-					</a>
-				</li>
-			</ul>
-		</div>
 	</div>
 </div>
 <!-- END PAGE HEADER-->
 <!-- BEGIN MAIN CONTENT -->
 <div class="row">
 	<div class="col-md-12">
-		<div class="note note-danger note-bordered">
-			<p>
-				NOTE: The below datatable is not connected to a real database so the filter and sorting is just simulated for demo purposes only.
-			</p>
-		</div>
 		<!-- Begin: life time stats -->
 		<div class="portlet light">
 			<div class="portlet-title">
 				<div class="caption font-green-sharp">
-					<i class="icon-settings font-green-sharp"></i>
-					<span class="caption-subject bold uppercase">Order Listing</span>
+					<i class="icon-list font-green-sharp"></i>
+					<span class="caption-subject bold uppercase">Kiraler</span>
 				</div>
 				<div class="actions">
-					<a href="#" class="btn default yellow-stripe">
+					<a href="#/lease/add" class="btn default yellow-stripe">
 					<i class="fa fa-plus"></i>
 					<span class="hidden-480">
-					New Order </span>
+					Yeni Kira </span>
 					</a>
-					<div class="btn-group">
-						<a class="btn default yellow-stripe" href="#" data-toggle="dropdown">
-						<i class="fa fa-share"></i>
-						<span class="hidden-480">
-						Tools </span>
-						<i class="fa fa-angle-down"></i>
-						</a>
-						<ul class="dropdown-menu pull-right">
-							<li>
-								<a href="#">
-								Export to Excel </a>
-							</li>
-							<li>
-								<a href="#">
-								Export to CSV </a>
-							</li>
-							<li>
-								<a href="#">
-								Export to XML </a>
-							</li>
-							<li class="divider">
-							</li>
-							<li>
-								<a href="#">
-								Print Invoices </a>
-							</li>
-						</ul>
-					</div>
 				</div>
 			</div>
 			<div class="portlet-body">
@@ -115,7 +47,7 @@
 							<option value="Cancel">On Hold</option>
 							<option value="Close">Close</option>
 						</select>
-						<button class="btn btn-sm yellow table-group-action-submit"><i class="fa fa-check"></i> Submit</button>
+						<button class="btn btn-sm yellow table-group-action-submit"><i class="fa fa-check"></i> Uygula</button>
 					</div>
 					<table class="table table-striped table-bordered table-hover" id="datatable_ajax">
 						<thead>
@@ -124,28 +56,28 @@
 									<input type="checkbox" class="group-checkable">
 								</th>
 								<th width="5%">
-									Record&nbsp;#
+									Kayıt&nbsp;#
 								</th>
 								<th width="15%">
-									Date
+									Tarih
 								</th>
 								<th width="15%">
-									Customer
+									Müşteri
 								</th>
 								<th width="10%">
-									Ship&nbsp;To
+									İsim
 								</th>
 								<th width="10%">
-									Price
+									Fiyat
 								</th>
 								<th width="10%">
-									Amount
+									Miktar
 								</th>
 								<th width="10%">
-									Status
+									Durum
 								</th>
 								<th width="10%">
-									Actions
+									Aksiyon
 								</th>
 							</tr>
 							<tr role="row" class="filter">
@@ -156,13 +88,13 @@
 								</td>
 								<td>
 									<div class="input-group date date-picker margin-bottom-5" data-date-format="dd/mm/yyyy">
-										<input type="text" class="form-control form-filter input-sm" readonly name="order_date_from" placeholder="From">
+										<input type="text" class="form-control form-filter input-sm" readonly name="order_date_from" placeholder="Başlangıç">
 										<span class="input-group-btn">
 										<button class="btn btn-sm default" type="button"><i class="fa fa-calendar"></i></button>
 										</span>
 									</div>
 									<div class="input-group date date-picker" data-date-format="dd/mm/yyyy">
-										<input type="text" class="form-control form-filter input-sm" readonly name="order_date_to" placeholder="To">
+										<input type="text" class="form-control form-filter input-sm" readonly name="order_date_to" placeholder="Bitiş">
 										<span class="input-group-btn">
 										<button class="btn btn-sm default" type="button"><i class="fa fa-calendar"></i></button>
 										</span>
@@ -197,15 +129,16 @@
 								</td>
 								<td>
 									<div class="margin-bottom-5">
-										<button class="btn btn-sm yellow filter-submit margin-bottom"><i class="fa fa-search"></i> Search</button>
+										<button class="btn btn-sm yellow filter-submit margin-bottom"><i class="fa fa-search"></i> Ara</button>
 									</div>
-									<button class="btn btn-sm red filter-cancel"><i class="fa fa-times"></i> Reset</button>
+									<button class="btn btn-sm red filter-cancel"><i class="fa fa-times"></i> Sıfırla</button>
 								</td>
 							</tr>
 						</thead>
 						<tbody>
 						</tbody>
 					</table>
+				</div>
 				</div>
 			</div>
 		</div>
