--- a/templates/aero_lease_app.html
+++ b/templates/aero_lease_app.html
@@ -167,10 +167,7 @@ License: You must have a valid license purchased only from themeforest(the above
     /* Init Metronic's core jquery plugins and layout scripts */
     $(document).ready(function () {
         Metronic.init(); // Run metronic theme
-        Metronic.setAssetsPath('{% static '
-        metronic / ' %}'
-    )
-        ; // Set the assets folder path
+        Metronic.setAssetsPath('{% static metronic / ' %}'); // Set the assets folder path
     });
 </script>
 <!-- END JAVASCRIPTS -->
