IHAKI-11 Implemented basic endpoints using IHAKI-12 RESTFramework. Excluded certain fields (e.g. is_deleted) and configured permissions.

--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@ License: For each use you must have a valid license purchased only from above li
                                     <!--begin::Menu item-->
                                     <div class="menu-item">
                                         <!--begin::Menu link-->
-                                        <a class="menu-link nav-link py-3 px-4 px-xxl-6" href="/AeroAdmin/api/v1"
+                                        <a class="menu-link nav-link py-3 px-4 px-xxl-6" href="/api/v1"
                                            data-kt-scroll-toggle="true" target="_blank" data-kt-drawer-dismiss="true">Uygulama
                                             API</a>
                                         <!--end::Menu link-->
